--- a/README.adoc
+++ b/README.adoc
@@ -43,7 +43,8 @@ export SCHEMA_REGISTRY_PASSWORD=YOUR_SCHEMA_REGISTRY_PASSWORD
 .send a test message
 [source,shell script]
 ----
-docker exec -it kafka bash -c "echo \"foo:bar\" | kafka-console-producer --topic myTopic --broker-list localhost:9092 --property parse.key=true --property key.separator=:"
+docker exec -it kafka bash -c "echo \"567\" | kafka-console-producer --topic total --broker-list localhost:9092"
+docker exec -it kafka bash -c "echo \"java:3\" | kafka-console-producer --topic langs --broker-list localhost:9092 --property parse.key=true --property key.separator=:"
 ----
 
 
