--- a/README.adoc
+++ b/README.adoc
@@ -20,14 +20,30 @@ docker exec -it schema-registry /usr/bin/kafka-json-schema-console-consumer --to
 
 [source,shell script]
 ----
-export BOOTSTRAP_SERVERS=YOUR_BOOTSTRAP_SERVEERS
-export CCLOUD_KEY=YOUR_CCLOUD_KEY
-export CCLOUD_PASSWORD=YOUR_CCLOUD_PASSWORD
+export KAFKA_BOOTSTRAP_SERVERS=YOUR_BOOTSTRAP_SERVEERS
+export KAFKA_USERNAME=YOUR_CCLOUD_KEY
+export KAFKA_PASSWORD=YOUR_CCLOUD_PASSWORD
 export SCHEMA_REGISTRY_URL=YOUR_CCLOUD_SCHEMA_REGISTRY_URL
 export SCHEMA_REGISTRY_KEY=YOUR_SCHEMA_REGISTRY_USERNAME
 export SCHEMA_REGISTRY_PASSWORD=YOUR_SCHEMA_REGISTRY_PASSWORD
 
 ./gradlew :ws-to-kafka:run
+----
+
+.containerize & run
+[source,shell script]
+----
+./gradlew :ws-to-kafka:bootBuildImage --imageName=skk-ws-to-kafka
+
+# using env vars from above
+docker run -it \
+  -eKAFKA_BOOTSTRAP_SERVERS=$KAFKA_BOOTSTRAP_SERVERS \
+  -eKAFKA_USERNAME=$KAFKA_USERNAME \
+  -eKAFKA_PASSWORD=$KAFKA_PASSWORD \
+  -eSCHEMA_REGISTRY_URL=$SCHEMA_REGISTRY_URL \
+  -eSCHEMA_REGISTRY_KEY=$SCHEMA_REGISTRY_KEY \
+  -eSCHEMA_REGISTRY_PASSWORD=$SCHEMA_REGISTRY_PASSWORD \
+  skk-ws-to-kafka
 ----
 
 
@@ -51,13 +67,25 @@ docker exec -it kafka bash -c "echo \"java:3\" | kafka-console-producer --topic 
 
 [source,shell script]
 ----
-export KAKFA_BOOTSTRAP_SERVERS=YOUR_BOOTSTRAP_SERVEERS
+export KAFKA_BOOTSTRAP_SERVERS=YOUR_BOOTSTRAP_SERVEERS
 export KAFKA_USERNAME=YOUR_CCLOUD_KEY
 export KAFKA_PASSWORD=YOUR_CCLOUD_PASSWORD
 
 ./gradlew :web-ui:run
 ----
 
+.containerize & run
+[source,shell script]
+----
+./gradlew :web-ui:bootBuildImage --imageName=skk-web-ui
+
+# using env vars from above
+docker run -it \
+  -eKAFKA_BOOTSTRAP_SERVERS=$KAFKA_BOOTSTRAP_SERVERS \
+  -eKAFKA_USERNAME=$KAFKA_USERNAME \
+  -eKAFKA_PASSWORD=$KAFKA_PASSWORD \
+  skk-web-ui
+----
 
 == todo
 
