--- a/README.adoc
+++ b/README.adoc
@@ -68,6 +68,9 @@ TODO
 
 [source,shell script]
 ----
+export KAFKA_BOOTSTRAP_SERVERS=YOUR_BOOTSTRAP_SERVERS
+export KAFKA_USERNAME=YOUR_CCLOUD_KEY
+export KAFKA_PASSWORD=YOUR_CCLOUD_PASSWORD
 export KSQLDB_ENDPOINT=YOUR_KSQLDB_ENDPOINT
 export KSQLDB_USERNAME=YOUR_KSQLDB_USERNAME
 export KSQLDB_PASSWORD=YOUR_KSQLDB_PASSWORD
@@ -82,6 +85,9 @@ export KSQLDB_PASSWORD=YOUR_KSQLDB_PASSWORD
 
 # using env vars from above
 docker run -it \
+  -eKAFKA_BOOTSTRAP_SERVERS=$KAFKA_BOOTSTRAP_SERVERS \
+  -eKAFKA_USERNAME=$KAFKA_USERNAME \
+  -eKAFKA_PASSWORD=$KAFKA_PASSWORD \
   -eKSQLDB_ENDPOINT=$KSQLDB_ENDPOINT \
   -eKSQLDB_USERNAME=$KSQLDB_USERNAME \
   -eKSQLDB_PASSWORD=$KSQLDB_PASSWORD \
